--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.14.3",
+    "@huggingface/inference": "^4.3.0",
     "@huggingface/transformers": "^3.5.2",
     "@langchain/community": "^0.3.45",
     "@langchain/core": "^0.3.57",
     "@langchain/ollama": "^0.2.1",
+    "@xenova/transformers": "^2.17.2",
     "dotenv": "^16.5.0",
     "hono": "^4.7.11",
     "http-status-codes": "^2.3.0",
