--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
+    "@chroma-core/default-embed": "^0.1.8",
     "@hono/node-server": "^1.14.3",
     "@huggingface/inference": "^4.3.0",
     "@huggingface/transformers": "^3.5.2",
@@ -14,6 +15,7 @@
     "@langchain/core": "^0.3.57",
     "@langchain/ollama": "^0.2.1",
     "@xenova/transformers": "^2.17.2",
+    "chromadb": "^3.0.11",
     "dotenv": "^16.5.0",
     "hono": "^4.7.11",
     "http-status-codes": "^2.3.0",
